environment.Environment.scala.error
Erreur de compilation :
Environment:1: error: not found: type NORTH
setDirection(dir:NORTH)
                 ^Environment:1: error: not found: value dir
setDirection(dir:NORTH)
             ^Environment:2: error: not found: type int
forward(1:int) 
          ^